--- a/Ai_Fitness_Tracker/frontend/package.json
+++ b/Ai_Fitness_Tracker/frontend/package.json
@@ -8,13 +8,14 @@
     "@mediapipe/pose": "^0.5.1675469404",
     "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.7",
+    "clsx": "^2.1.0",
+    "framer-motion": "^12.34.2",
     "lucide-react": "^0.331.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.1",
-    "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1"
   },
   "scripts": {
@@ -40,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.1"
   }
 }
